fixed NFT images to 2 on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,7 @@ body {
   cursor: pointer;
   font-size: 40px;
   margin-top: -30px ;
+  color: white;
 }
 
 .slider-container {
@@ -546,7 +547,7 @@ body {
 @media (max-width: 768px) {
   .hamburger {
     display: block;
-    margin-left: 300px;
+    margin-left: 290px;
   }
   .navbar {
     flex-direction: column;
@@ -675,7 +676,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start; /* Align to the left */
-    margin-right: 240px;
+    margin-right: 210px;
     margin-top: 20px;
   }
 
@@ -700,10 +701,10 @@ body {
   }
   
   .image-container a img {
-    flex: 1;
-    max-width: 80%;
+    max-width: 98%;
     height: auto;
-    margin: 20px;
+    margin: 3px;
+    margin-bottom: 20px;
     border-radius: 10px;
     cursor: pointer;
   }
@@ -712,8 +713,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 50px;
     width: 100%;
+  }
+
+  .image-techcontainer a img {
+    max-width: 100%;
+    height: auto;
+    margin: 0px;
+    border-radius: 10px;
+    cursor: pointer;
   }
   
   .image-grid {
@@ -759,7 +768,20 @@ body {
     display: flex;
     justify-content: center;
     margin: 0 0px;
-    margin-left: 30px;
+    margin-left: 20px;
+  }
+
+  .nft-image {
+    width: 115px;
+    height: auto;
+    border-radius: 12px;
+  }
+
+  h3.collection-title {
+    font-size: 28px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 80px;
   }
 
   .slick-prev:before {
